Wraps <pre> content on small screens (Fixes #3)^

--- a/src/screen.scss
+++ b/src/screen.scss
@@ -202,8 +202,9 @@ pre {
   font-size: 0.9em;
   line-height: 1.3em;
   padding: 0.5em 1em 0.5em 2em;
+  white-space: pre-wrap;
 
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 1025px) {
     border: none;
     padding: 1em 0;
     overflow-wrap: break-word;
